kubernetes/apps/default/misc-ingress/app/ingress-external-food.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: &host "food.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: food
                port:
                  number: 9093
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: food
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 9093
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: food
spec:
  ports:
    - name: http
      port: 9093
  type: ClusterIP
